fix(action-bar) fix front end action bar mobile layout bug

--- a/views/themes/action_bar/assets/stylesheets/action_bar/action_bar.scss
+++ b/views/themes/action_bar/assets/stylesheets/action_bar/action_bar.scss
@@ -206,6 +206,10 @@
 }
 
 @media only screen and (max-width: 767px){
+    .qor-actionbar .qor-actionbar--container{
+        width: calc(100% - 16px);
+        padding: 0 8px;
+    }
     .qor-actionbar__right .qor-actionbar__info span{
         display: none;
     }
